--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "svg-inline-loader": "^0.8.0",
     "tailwindcss": "^1.1.2",
     "webpack": "^4.41.0",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
   },
@@ -65,7 +66,6 @@
     "react-tabs": "^3.1.0",
     "react-text-loop": "^2.3.0",
     "recharts": "^2.0.0-beta.1",
-    "setprotocol.js": "^1.2.2-rc30",
     "simpleid-js-sdk": "^1.1.0",
     "styled-components": "^5.0.0",
     "uuid": "^3.3.3",
